--- a/1204_koiben/Base.lproj/Main.storyboard
+++ b/1204_koiben/Base.lproj/Main.storyboard
@@ -29,15 +29,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R0h-kh-vvw">
-                                <rect key="frame" x="134" y="403" width="108" height="30"/>
+                                <rect key="frame" x="134" y="402" width="108" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="恋勉を始める"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FvJ-SC-CqR">
-                                <rect key="frame" x="134" y="459" width="108" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="独勉時間の登録"/>
+                                <connections>
+                                    <segue destination="l0n-AH-Y6t" kind="modal" id="G5w-J2-mYI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -46,6 +44,151 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="63.200000000000003" y="125.4872563718141"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="0S9-sz-DhC">
+            <objects>
+                <viewController id="l0n-AH-Y6t" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rfo-u1-czr"/>
+                        <viewControllerLayoutGuide type="bottom" id="ALe-jB-g0x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rMu-ed-pZE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="プロフィールの登録" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pif-3o-4G4">
+                                <rect key="frame" x="110" y="323" width="156" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJz-Cj-JCK">
+                                <rect key="frame" x="144" y="595" width="88" height="52"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="登録完了"/>
+                                <connections>
+                                    <segue destination="CJR-Rg-JV7" kind="modal" id="pSZ-WF-Rvm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MsM-tr-3Gi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="764" y="124.58770614692655"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="BXt-BF-QI8">
+            <objects>
+                <viewController id="CJR-Rg-JV7" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Q6x-2N-dGO"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Kj-Hb-KhG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uN3-aW-INz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ストーリー①" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pY-t3-P0l">
+                                <rect key="frame" x="136" y="323" width="102" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Y6-Nc-8E4">
+                                <rect key="frame" x="321" y="617" width="31" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="次へ"/>
+                                <connections>
+                                    <segue destination="R99-tG-PKz" kind="modal" id="oIT-3i-q3w"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iZE-rE-PDe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1455" y="125"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="KeX-iQ-MCT">
+            <objects>
+                <viewController id="9yg-X6-VCu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vXd-Qs-gxK"/>
+                        <viewControllerLayoutGuide type="bottom" id="tsC-jg-9IT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hSO-IL-nIa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="Q1m-5o-DzR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kqh-PV-PZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3063" y="441"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xhN-xw-gvU">
+            <objects>
+                <viewController id="6vr-oU-eyq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UXk-pb-pX3"/>
+                        <viewControllerLayoutGuide type="bottom" id="wNb-YW-JHX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FWK-hP-MjN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-FL-Dtt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3057" y="1104"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="0XN-4j-DDy">
+            <objects>
+                <viewController id="vbE-gZ-mUh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="h2k-Sq-tNO"/>
+                        <viewControllerLayoutGuide type="bottom" id="4Qf-5j-352"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="thB-uQ-yYP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="tEn-5c-eTY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TmZ-Dn-CVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3063" y="-214"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fuh-B2-ZdM">
+            <objects>
+                <tabBarController id="R99-tG-PKz" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="nMJ-iC-V65">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="vbE-gZ-mUh" kind="relationship" relationship="viewControllers" id="WPP-sw-Wku"/>
+                        <segue destination="9yg-X6-VCu" kind="relationship" relationship="viewControllers" id="NCO-3Q-c19"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G40-wn-oU5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2156" y="125"/>
         </scene>
     </scenes>
 </document>
