--- a/1204_koiben/Base.lproj/Main.storyboard
+++ b/1204_koiben/Base.lproj/Main.storyboard
@@ -29,10 +29,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R0h-kh-vvw">
-                                <rect key="frame" x="134" y="402" width="108" height="32"/>
+                                <rect key="frame" x="131" y="402" width="115" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <state key="normal" title="恋勉を始める"/>
+                                <state key="normal" title="恋勉をはじめる"/>
                                 <connections>
                                     <segue destination="l0n-AH-Y6t" kind="modal" id="G5w-J2-mYI"/>
                                 </connections>
@@ -134,31 +134,33 @@
                     <view key="view" contentMode="scaleToFill" id="hSO-IL-nIa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rJ3-zT-UjA">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="Q1m-5o-DzR"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kqh-PV-PZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3063" y="441"/>
+            <point key="canvasLocation" x="2900" y="322"/>
         </scene>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="xhN-xw-gvU">
             <objects>
-                <viewController id="6vr-oU-eyq" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="UXk-pb-pX3"/>
-                        <viewControllerLayoutGuide type="bottom" id="wNb-YW-JHX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="FWK-hP-MjN">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-FL-Dtt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="6vr-oU-eyq" sceneMemberID="viewController">
+                    <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="wiu-g6-Lbc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <tabBarItem key="tabBarItem" title="Item" id="VXi-Ky-zzh"/>
+                </viewController>
             </objects>
-            <point key="canvasLocation" x="3057" y="1104"/>
+            <point key="canvasLocation" x="2900" y="1158"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="0XN-4j-DDy">
@@ -171,13 +173,19 @@
                     <view key="view" contentMode="scaleToFill" id="thB-uQ-yYP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3I-jk-Lr7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="tEn-5c-eTY"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TmZ-Dn-CVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3063" y="-214"/>
+            <point key="canvasLocation" x="2900" y="-529.38530734632684"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="fuh-B2-ZdM">
@@ -191,6 +199,7 @@
                     <connections>
                         <segue destination="vbE-gZ-mUh" kind="relationship" relationship="viewControllers" id="WPP-sw-Wku"/>
                         <segue destination="9yg-X6-VCu" kind="relationship" relationship="viewControllers" id="NCO-3Q-c19"/>
+                        <segue destination="6vr-oU-eyq" kind="relationship" relationship="viewControllers" id="4cj-CI-ilN"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G40-wn-oU5" userLabel="First Responder" sceneMemberID="firstResponder"/>
