--- a/1204_koiben/Base.lproj/Main.storyboard
+++ b/1204_koiben/Base.lproj/Main.storyboard
@@ -135,7 +135,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rJ3-zT-UjA">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img002.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="rJ3-zT-UjA">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -151,7 +151,6 @@
         <!--Item-->
         <scene sceneID="xhN-xw-gvU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-FL-Dtt" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="6vr-oU-eyq" sceneMemberID="viewController">
                     <imageView key="view" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="wiu-g6-Lbc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -159,6 +158,7 @@
                     </imageView>
                     <tabBarItem key="tabBarItem" title="Item" id="VXi-Ky-zzh"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-FL-Dtt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2900" y="1158"/>
         </scene>
@@ -174,7 +174,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M3I-jk-Lr7">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img001.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="M3I-jk-Lr7">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -207,4 +207,8 @@
             <point key="canvasLocation" x="2156" y="125"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="img001.jpg" width="567" height="1005"/>
+        <image name="img002.jpg" width="567" height="1005"/>
+    </resources>
 </document>
