--- a/1204_koiben/Base.lproj/Main.storyboard
+++ b/1204_koiben/Base.lproj/Main.storyboard
@@ -190,6 +190,7 @@
         <!--Main1-->
         <scene sceneID="NAC-xE-h6R">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dNc-Xb-96P" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Main1" id="DQG-NY-cvC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ojv-pu-W3l"/>
@@ -203,26 +204,19 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="恋勉（ここのコードを一生懸命書く）" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEs-9g-BJJ">
-                                <rect key="frame" x="41" y="323" width="295" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ここにデフォルトのコメントが入ります。ここにデフォルトのコメントが入ります。ここにデフォルトのコメントが入ります。ここにデフォルトのコメントが入ります。" lineBreakMode="headTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UgX-KQ-yvA">
+                                <rect key="frame" x="22" y="487" width="331" height="138"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="選んだ彼に応じて、ここに表示する画像を変える" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pki-0b-OoD">
-                                <rect key="frame" x="-2" y="373" width="382" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E4I-Kr-BJv">
+                                <rect key="frame" x="149" y="371" width="77" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ENK-c8-hTh">
-                                <rect key="frame" x="16" y="20" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="もどる"/>
+                                <state key="normal" title="恋勉をする"/>
                                 <connections>
-                                    <segue destination="R99-tG-PKz" kind="modal" id="EI2-ch-MBZ"/>
+                                    <segue destination="cjd-Og-i8E" kind="show" id="Nlo-DZ-BYX"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -230,9 +224,52 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="w4l-N2-z0F"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dNc-Xb-96P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4764" y="-753.37331334332839"/>
+        </scene>
+        <!--Main2-->
+        <scene sceneID="r6l-4O-nvP">
+            <objects>
+                <viewController title="Main2" id="cjd-Og-i8E" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nbO-Ts-2Ph"/>
+                        <viewControllerLayoutGuide type="bottom" id="OMu-Bf-0DG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="osQ-BA-mtL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eCu-6b-e9s">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vif-AA-0t5">
+                                <rect key="frame" x="149" y="396" width="77" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="会話をする"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ここに会話が入ります。ここに会話が入ります。ここに会話が入ります。ここに会話が入ります。ここに会話が入ります。" lineBreakMode="headTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BRj-Vq-MY9">
+                                <rect key="frame" x="22" y="496" width="331" height="138"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="shO-8l-HfS">
+                                <rect key="frame" x="141" y="458" width="92" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="恋勉をやめる"/>
+                                <connections>
+                                    <segue destination="DQG-NY-cvC" kind="show" id="ZgI-Zk-lYf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bNv-zs-S9N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5729" y="-753"/>
         </scene>
         <!--MainTab-->
         <scene sceneID="GOU-as-IQP">
@@ -422,7 +459,8 @@
         <image name="img003.jpg" width="567" height="1005"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cet-5t-an4"/>
-        <segue reference="yxh-P7-PqB"/>
+        <segue reference="ZgI-Zk-lYf"/>
+        <segue reference="2gU-4h-L2I"/>
+        <segue reference="tQ9-bd-Jca"/>
     </inferredMetricsTieBreakers>
 </document>
